# PicoPixel

./: .gitmodules  CMakeLists.txt  PicoPixel.c  PicoPixel.h  ZCPP.h  acn.c  acn.h  eepromManager.c  eepromManager.h  effects.c  effects.h  index.html  jscolor_js.h  networkManager.c  networkManager.h  outputManager.c  outputManager.h  userHandler.c  userHandler.h  userHandlerExtraFunctions.c  userHandler_old.c  web_page.h  web_page_old.h  ws2812.pio  zcpp_implementation.c  zcpp_implementation.h
Internet/: dhcp.c  dhcp.h
httpserver/: httpParser.c  httpParser.h  httpServer.c  httpUtil.c
